src/DevelopersSite/wwwroot/documents/SDK.NET/v1.5.0/service.md
## Services

You can quickly create a data processing service from the available service templates. Manage your data processing with services, run different tests, run more data management services parallelly.

### Create Service

_Example:_

```cs
var service = new Service()
            {
                Name = "Test service",
                Description = "This is a test service",
                Type = ServiceTypeEnum.Classifier,
                Alias = "The Service"
            };
var result = await serviceManager.CreateServiceAsync(service);
var createdService = result.ResponseObject;

```

> **Tip:** The ID of the Service is generated by the API. Service Alias is defined by the user and it is unique among services.

### Get Service List

_Example:_

```cs
var serviceManager = new ServiceManager(_configuration);
var servicesResponse = await serviceManager.GetServicesAsync();

```

### Get Service

You can use Service Alias instead of Guid Id.

_Example:_

```cs
var serviceManager = new ServiceManager(_configuration);
var serviceResponse = await serviceManager.GetServiceAsync(serviceId);
```



### Update Service

You can modify only the `Name` and `Description` properties. You can use Service Alias instead of Guid Id. If specified Alias exists on another Service then it will be removed first.

_Example:_

```cs
var serviceManager = new ServiceManager(_configuration);
createdService.Name = "Modified name";
createdService.Description = "Modified description";
createdService.Alias = "My Service";
var modifyResponse = await serviceManager.UpdateServiceAsync(createdService.Id, createdService);
```

### Delete Service

You can use Service Alias instead of Guid Id.

> WARNING: If you use Alias for deletion then make sure the Alias is on the right service!

_Example:_

```cs
var serviceManager = new ServiceManager(_configuration);
var deleteResponse = await serviceManager.DeleteServiceAsync(createdService.Id);
```

## Classifier Services

Service for text classification. Create a classifier service from a selected dataset, specify your settings and use this service API endpoint to classify your incoming text.

### Get Classifier Service

_Example:_

```cs
var classifierServiceManager = new ClassifierServiceManager(_configuration);
var classifierServiceResponse = await classifierServiceManager.GetServiceAsync(serviceId);
```

### Prepare Classifier Service

> **Tip:** You can limit used thread count for this function in the configuration object

_Example:_

```cs
var classifierServiceManager = new ClassifierServiceManager(_configuration);
var classifierPrepareSettings = new ClassifierPrepareSettings()
        {
            DataSetName = "example_dataset",
            NGramList = new List<int>() { 1, 2 }
        };
var prepareResponse = await classifierServiceManager.PrepareServiceAsync(serviceId, classifierPrepareSettings);
var process = prepareResponse.ResponseObject;
```


### Activate Classifier Service

_Example:_

```cs
var classifierServiceManager = new ClassifierServiceManager(_configuration);
var classifierActivateSettings = new Models.Services.ClassifierActivateSettings()
{
    NGramList = new List<int>() { 1 }
};
var activateResponse = await classifierServiceManager.ActivateServiceAsync(serviceId, classifierActivateSettings);
```

### Deactivate Classifier Service

_Example:_

```cs
var classifierServiceManager = new ClassifierServiceManager(_configuration);
deactivateResponse = await classifierServiceManager.DeactivateServiceAsync(classifierServiceId);
```

### Classifier Service Recommendation

_Example:_

```cs
var classifierServiceManager = new ClassifierServiceManager(_configuration);
var classifierRecommendationRequest = new Models.Services.ClassifierRecommendationRequest()
    {
        Text = "categorize this text",
        NeedTagInResult = true,
        Count = 5
    };
var recommendResponse = (await classifierServiceManager.RecommendAsync(serviceId, classifierRecommendationRequest));
```


### Classifier Service Export Dictionaries

_Example:_

```cs
var classifierServiceManager = new ClassifierServiceManager(_configuration);
var settings = new ExportDictionariesSettings
    {
        NGramList = new List<int> { 1, 2 },
        TagIdList = new List<string> { "123", "44" }
    };
var resultProcess = (await classifierServiceManager.ExportDictionariesAsync(serviceId, settings));
```


## Prc Services

Service for document recommendation. Create a prc service from a selected dataset, specify your settings and use this service API endpoint to get similar documents for your text.

### Get Prc Service

_Example:_

```cs
var prcServiceManager = new PrcServiceManager(_configuration);
var prcServiceResponse = await prcServiceManager.GetServiceAsync(serviceId);
```

### Prepare Prc Service

_Example:_

```cs
var prcServiceManager = new PrcServiceManager(_configuration);
var prcPrepareSettings = new PrcPrepareSettings()
        {
            DataSetName = "example_dataset",
            TagIdList = new List<int>() { "10", "11" }
        };
var prepareResponse = await prcServiceManager.PrepareServiceAsync(serviceId, prcPrepareSettings);
var process = prepareResponse.ResponseObject;
```


### Activate Prc Service

> **Tip:** You can limit used thread count for this function in the configuration object

_Example:_

```cs
var prcServiceManager = new PrcServiceManager(_configuration);
var prcActivateSettings = new Models.Services.PrcActivateSettings()
{
    FieldsForRecommendation = new List<string>() { "title" }
};
var activateResponse = await prcServiceManager.ActivateServiceAsync(serviceId, prcActivateSettings);
```

### Deactivate Prc Service

_Example:_

```cs
var prcServiceManager = new PrcServiceManager(_configuration);
var deactivateResponse = await prcServiceManager.DeactivateServiceAsync(serviceId);
```

### Prc Service Recommendation

_Example:_

```cs
var prcServiceManager = new PrcServiceManager(_configuration);
var prcRecommendationRequest = new Models.Services.PrcRecommendationRequest()
    {
        Text = "get similar documents for this text",
        NeedDocumentInResult = true,
        Count = 5,
        TagId = "10"
    };
var recommendResponse = (await prcServiceManager.RecommendAsync(serviceId, prcRecommendationRequest));
```

### Prc Service Keywords Extraction

_Example:_

```cs
var prcServiceManager = new PrcServiceManager(_configuration);
var prcKeywordsRequest = new SDK.Net.Models.Services.PrcKeywordsRequest()
{
    Text = "get the keywords from this text",
    TagId = "10"
};
var keywordsResponse = (await prcServiceManager.KeywordsAsync(serviceId, prcKeywordsRequest));
```

### Prc Service Export Dictionaries

_Example:_

```cs
var prcServiceManager = new PrcServiceManager(_configuration);
var settings = new ExportDictionariesSettings
    {
        TagIdList = new List<string> { "123", "44" }
    };
var resultProcess = (await prcServiceManager.ExportDictionariesAsync(serviceId, settings));
```

### Index

_Example:_

```cs
var prcServiceManager = new PrcServiceManager(_configuration);
var settings = new PrcIndexSettings
    {
        Filter = new Filter()
        {
            Query = "title:michelin",
            TagIdList = new List<string>() { "tag1Id", "tag2Id" };
        };
    };
var resultProcess = await prcServiceManager.IndexAsync(serviceId, settings);
```

### Index Partial

_Example:_

```cs
var prcServiceManager = new PrcServiceManager(_configuration);
var resultProcess = await prcServiceManager.IndexPartialAsync(serviceId);
```


### Recommend By Id

_Example:_

```cs
var prcServiceManager = new PrcServiceManager(_configuration);
var prcRecommendationRequest = new Models.Services.PrcRecommendationByIdRequest()
    {
        DocumentId = "987654",
        NeedDocumentInResult = true,
        Count = 5,
        TagId = "tag1Id"
    };
var recommendResponse = (await prcServiceManager.RecommendByIdAsync(serviceId, prcRecommendationRequest));
```

## Search Services

Slamby tuned Search Engine.

### Get Search Service

_Example:_

```cs
var searchServiceManager = new SearchServiceManager(_configuration);
var searchServiceResponse = await searchServiceManager.GetServiceAsync(serviceId);
```

### Prepare Search Service

_Example:_

```cs
var searchServiceManager = new SearchServiceManager(_configuration);
var searchPrepareSettings = new SearchPrepareSettings()
        {
            DataSetName = "example_dataset"
        };
var prepareResponse = await searchServiceManager.PrepareServiceAsync(serviceId, searchPrepareSettings);
var process = prepareResponse.ResponseObject;
```


### Activate Search Service

_Example:_

```cs
var searchServiceManager = new SearchServiceManager(_configuration);
var searchActivateSettings = new SearchActivateSettings();
var activateResponse = await searchServiceManager.ActivateServiceAsync(serviceId, searchActivateSettings);
```

### Deactivate Search Service

_Example:_

```cs
var searchServiceManager = new SearchServiceManager(_configuration);
var deactivateResponse = await searchServiceManager.DeactivateServiceAsync(serviceId);
```

### Search Service Request

_Example:_

```cs
var searchServiceManager = new SearchServiceManager(_configuration);
var searchRequest = new SearchRequest()
{
    Text = "these are my search keywords"
};
var recommendResponse = (await searchServiceManager.SearchAsync(serviceId, searchRequest));
```